changes in all file

--- a/test1/.env
+++ b/test1/.env
@@ -1,1 +1,4 @@
-fknsdkllfhsdasflkbasdjkfnasdm,bsjkbfnjasdfhjasd fmnasdbfn asdafb
+fknsdkllfhsdasflkbasdjkfnasdm,bsjkbfnjasdfhjasd fmnasdbfn asdafbcmbncjkz
+zchsdf
+khjfklas'
+'nsdjkdfs
